--- a/configs/data/default.yaml
+++ b/configs/data/default.yaml
@@ -1,13 +1,12 @@
-_target_: src.data.datamodule.DataModule  
+_target_: src.data.datamodule.DataModule
 
 dataset:
   _target_: src.data.components.amelia_dataset.AmeliaDataset
   config:
-    in_data_dir: ${paths.in_data_dir}
-    out_data_dir: ${paths.out_data_dir}
+    in_data_dir: ${paths.scenes_dir}
     context_dir: ${paths.context_dir}
     assets_dir: ${paths.assets_dir}
-    
+
     split: null
 
     traj_len: 60
@@ -23,13 +22,16 @@ dataset:
 
     encode_agent_type: false
     encode_interp_flag: false
-    
+
     parallel: true
     debug: false
     do_sharding: true
 
     sampling_strategy: random
+    supported_sampling_strategies: [random, kinematic, interactive, critical]
     k_agents: 5
+
+    seed: ${seed}
 
 extra_params:
   batch_size: 128
@@ -38,6 +40,7 @@ extra_params:
   persistent_workers: true
 
   data_prep:
+    traj_data_dir: ${paths.traj_data_dir}
     in_data_dir: ${paths.in_data_dir}
     exp_suffix: all-in_context-${data.dataset.config.add_context}
 
@@ -46,7 +49,7 @@ extra_params:
 
     to_process: 1.0
     seed: ${seed}
-  
+
     split_type: day
     day_splits:
       train_val: [0.8, 0.2]
