--- a/.gitignore
+++ b/.gitignore
@@ -165,3 +165,11 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+# MAC
+**.DS_Store
+
+# dataset
+datasets
+
+!datasets/error_files.py
