--- a/configs/eval.yaml
+++ b/configs/eval.yaml
@@ -6,7 +6,7 @@ defaults:
   - model: marginal.yaml
   - callbacks: default.yaml
   - logger: wandb # set logger here or use command line (e.g. `python train.py logger=tensorboard`)
-  - trainer: default.yaml
+  - trainer: gpu.yaml
   - paths: version8.yaml
   - extras: default.yaml
   - hydra: default.yaml
