--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,6 @@ description = "Amelia TF is a large transformer-based trajectory forecasting mod
 readme = {file = "README.md", content-type = "text/markdown"}
 requires-python = ">=3.9, <4.0"
 dependencies = [
-    'setuptools',
     'lightning==2.2.0.post0',
     'hydra-core==1.3.2',
     'hydra_colorlog==1.2.0',
@@ -29,6 +28,7 @@ dependencies = [
     'tqdm==4.65.0',
     'networkx==3.1',
     'python-dateutil==2.9.0',
+    'amelia_scenes @ git+https://github.com/AmeliaCMU/AmeliaScenes.git@main',
 ]
 
 authors = [
@@ -43,8 +43,9 @@ authors = [
 train_command = "src.train:main"
 eval_command = "src.eval:main"
 
-[tool.setuptools.packages.find]
-where = ["src"]
+
+[tool.setuptools]
+packages = ["src"]
 
 [project.urls]
 Repository = "https://github.com/AmeliaCMU/AmeliaTF"
