--- a/configs/eval.yaml
+++ b/configs/eval.yaml
@@ -1,4 +1,7 @@
 
+type: Multi-Airport
+ckpt: seen-1
+
 defaults:
   - _self_
   - data: seen-all.yaml
@@ -17,6 +20,6 @@ tags: ["dev"]
 # passing checkpoint path is necessary for evaluation
 
 ckpt_dir: ${paths.base_dir}/checkpoints
-ckpt_path: ${ckpt_dir}/${type}/${ckpt}/${ckpt}_critical.ckpt
+ckpt_path: ${ckpt_dir}/${type}/${ckpt}/${ckpt}.ckpt
 # seed for random number generators in pytorch, numpy and python.random
 seed: 42
