--- a/configs/eval.yaml
+++ b/configs/eval.yaml
@@ -1,10 +1,10 @@
 
 type: Multi-Airport
-ckpt: seen-all
+ckpt: seen-1
 
 defaults:
   - _self_
-  - data: seen-all.yaml
+  - data: seen-1.yaml
   - model: marginal.yaml
   - callbacks: default.yaml
   - logger: wandb # set logger here or use command line (e.g. `python train.py logger=tensorboard`)
