Differentiation between evaluation and training tasks (#6)
* evaluate kbos

* set to gpu

* fixed error

* removed visualization

* kwer

* kwer

* panc

* kdca

* break

* kbos

* fix

* remove csv

* kewr

* kjfk

* klax

* panc

* kbos

* kdca

* kewr

* kmdw

* Updated python libraries on setup

Updated links to files

updated instal script link

setup library update

* Added task validation for train and eval

Initial commit

Updated links to files

update: readme instructions

deleted duplicated library

updated setup.py to pyproject.toml

Added link to paper

installation

install update

installation

toml installation

added task validation

set eval to marginal

* evaluation ckpt

--- a/configs/data/default.yaml
+++ b/configs/data/default.yaml
@@ -67,5 +67,9 @@ extra_params:
       train_val_test: [0.7, 0.1, 0.2]
       unseen_perc: 0.25
 
+  task_name: ${task_name}
+  task_names: [train, eval]
+
+
   supported_splits: [random, month, day]
   supported_airports: [kbos, kdca, kewr, kjfk, klax, kmdw, kmsy, ksea, ksfo, panc]
