--- a/configs/eval.yaml
+++ b/configs/eval.yaml
@@ -1,9 +1,11 @@
-# @package _global_
+
+type: Multi-Airport
+ckpt: seen-1
 
 defaults:
   - _self_
   - data: seen-all.yaml
-  - model: traj_atc_marginal.yaml
+  - model: marginal.yaml
   - callbacks: default.yaml
   - logger: wandb # set logger here or use command line (e.g. `python train.py logger=tensorboard`)
   - trainer: default.yaml
@@ -16,7 +18,8 @@ task_name: "eval"
 tags: ["dev"]
 
 # passing checkpoint path is necessary for evaluation
-ckpt_path: "epoch_009.ckpt"
 
+ckpt_dir: ${paths.base_dir}/checkpoints
+ckpt_path: ${ckpt_dir}/${type}/${ckpt}/${ckpt}.ckpt
 # seed for random number generators in pytorch, numpy and python.random
 seed: 42
