--- a/configs/paths/default.yaml
+++ b/configs/paths/default.yaml
@@ -5,7 +5,7 @@ root_dir: ${oc.env:PROJECT_ROOT}
 
 base_dir: ./datasets/amelia
 
-# data paths. we asssume data is organized into subfolders, where each subfolder corresponds to
+# data paths. we assume data is organized into subfolders, where each subfolder corresponds to
 # a particular airport.
 traj_data_version: a10v08
 traj_data_dir: ${paths.base_dir}/traj_data_${paths.traj_data_version}
