--- a/configs/eval.yaml
+++ b/configs/eval.yaml
@@ -1,10 +1,10 @@
 
 type: Single-Airport
-ckpt: kmsy
+ckpt: ksfo
 
 defaults:
   - _self_
-  - data: kmsy.yaml
+  - data: ksfo.yaml
   - model: marginal.yaml
   - callbacks: default.yaml
   - logger: wandb # set logger here or use command line (e.g. `python train.py logger=tensorboard`)
