Fixed error for multi device training
deleted vscode file

switched src to amelia_tf

Modified src to amelia_tf

Removed vscode file (#8)

src to amelia tf

src. to amelia_tf.

updated pyproject.tml installs

devices test

multigpu

multi gpu

test

test

test

modified for duble gpu

test

--- a/.hydra/config.yaml
+++ b/.hydra/config.yaml
@@ -7,9 +7,9 @@ compile: false
 ckpt_path: null
 seed: 42
 data:
-  _target_: src.data.datamodule.DataModule
+  _target_: amelia_tf.data.datamodule.DataModule
   dataset:
-    _target_: src.data.components.swim_dataset.SWIMDataset
+    _target_: amelia_tf.data.components.swim_dataset.SWIMDataset
     config:
       in_data_dir: ${paths.in_data_dir}
       context_dir: ${paths.context_dir}
@@ -48,7 +48,7 @@ data:
         - 0.2
       test_split: 0.2
 model:
-  _target_: src.models.trajpred.TrajPred
+  _target_: amelia_tf.models.trajpred.TrajPred
   optimizer:
     lr: 0.0001
     weight_decay: 0.1
@@ -61,7 +61,7 @@ model:
     factor: 0.1
     patience: 10
   net:
-    _target_: src.models.components.atc_ctx.ContextATC
+    _target_: amelia_tf.models.components.atc_ctx.ContextATC
     config:
       encoder:
         in_size: 4
