added parameters so wandb sets automatic naming
removed duplicated variable

added: wandb dummy

added: gitignore wandb_user.yaml

setup wandb to user specific

--- a/configs/data/kbos.yaml
+++ b/configs/data/kbos.yaml
@@ -5,3 +5,5 @@ extra_params:
   data_prep:
     exp_suffix: kbos_context-${data.dataset.config.add_context}
     seen_airports: [kbos]
+
+    task: kbos
