--- a/.gitignore
+++ b/.gitignore
@@ -166,6 +166,9 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
+# igonre personal wandb files
+configs/logger/wandb_user.yaml
+
 
 # MAC
 **.DS_Store
