--- a/configs/data/kdca.yaml
+++ b/configs/data/kdca.yaml
@@ -1,7 +1,9 @@
 defaults:
   - default.yaml
-  
+
 extra_params:
   data_prep:
     exp_suffix: kdca_context-${data.dataset.config.add_context}
     seen_airports: [kdca]
+
+    task: kdca
