--- a/configs/data/kjfk.yaml
+++ b/configs/data/kjfk.yaml
@@ -1,7 +1,9 @@
 defaults:
   - default.yaml
-  
+
 extra_params:
   data_prep:
     exp_suffix: kjfk_context-${data.dataset.config.add_context}
     seen_airports: [kjfk]
+
+    task: kjfk
