--- a/configs/data/kmdw.yaml
+++ b/configs/data/kmdw.yaml
@@ -1,7 +1,9 @@
 defaults:
   - default.yaml
-  
+
 extra_params:
   data_prep:
     exp_suffix: kmdw_context-${data.dataset.config.add_context}
     seen_airports: [kmdw]
+
+    task: kmdw
