--- a/configs/data/ksfo.yaml
+++ b/configs/data/ksfo.yaml
@@ -1,7 +1,9 @@
 defaults:
   - default.yaml
-  
+
 extra_params:
   data_prep:
     exp_suffix: ksfo_context-${data.dataset.config.add_context}
     seen_airports: [ksfo]
+
+    task: ksfo
