--- a/configs/data/panc.yaml
+++ b/configs/data/panc.yaml
@@ -1,7 +1,9 @@
 defaults:
   - default.yaml
-  
+
 extra_params:
   data_prep:
     exp_suffix: panc_context-${data.dataset.config.add_context}
     seen_airports: [panc]
+
+    task: panc
