--- a/configs/data/seen-1.yaml
+++ b/configs/data/seen-1.yaml
@@ -10,3 +10,5 @@ extra_params:
     exp_suffix: seen1_context-${data.dataset.config.add_context}
     seen_airports: [kmdw]
     unseen_airports: [klax, kdca, ksea, kmsy, kjfk, ksfo, panc, kbos, kewr]
+
+    task: seen-1
