--- a/configs/data/seen-2.yaml
+++ b/configs/data/seen-2.yaml
@@ -10,3 +10,5 @@ extra_params:
     exp_suffix: seen2_context-${data.dataset.config.add_context}
     seen_airports: [kewr, kmdw]
     unseen_airports: [kdca, ksea, kmsy, kjfk, ksfo, panc, kbos, klax]
+
+    task: seen-2
