--- a/configs/data/seen-3.yaml
+++ b/configs/data/seen-3.yaml
@@ -10,3 +10,5 @@ extra_params:
     exp_suffix: seen3_context-${data.dataset.config.add_context}
     seen_airports: [kbos, kewr, kmdw]
     unseen_airports: [klax, kdca, ksea, kmsy, kjfk, ksfo, panc]
+
+    task: seen-3
