--- a/configs/data/seen-7.yaml
+++ b/configs/data/seen-7.yaml
@@ -10,3 +10,5 @@ extra_params:
     exp_suffix: seen7_context-${data.dataset.config.add_context}
     seen_airports: [kbos, kewr, ksea, kmdw, ksfo, kdca, panc]
     unseen_airports: [kmsy, kjfk, klax]
+
+    task: seen-7
