--- a/configs/eval.yaml
+++ b/configs/eval.yaml
@@ -7,7 +7,7 @@ defaults:
   - data: kbos.yaml
   - model: marginal.yaml
   - callbacks: default.yaml
-  - logger: wandb # set logger here or use command line (e.g. `python train.py logger=tensorboard`)
+  - logger: wandb.yaml # set logger here or use command line (e.g. `python train.py logger=tensorboard`)
   - trainer: default.yaml
   - paths: default.yaml
   - extras: default.yaml
