--- a/configs/trainer/default.yaml
+++ b/configs/trainer/default.yaml
@@ -7,6 +7,7 @@ max_epochs: 100
 
 accelerator: cpu
 devices: 1
+strategy: cpu
 gradient_clip_val: 0.5
 # mixed precision for extra speed-up
 # precision: 16
